--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "@hookform/resolvers": "^3.3.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "lucide-react": "^0.294.0",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
     "framer-motion": "^10.16.16",
-    "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.4",
     "openai": "^4.20.1",
-    "axios": "^1.6.2"
+    "postcss": "^8",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "eslint": "^8",
