--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.0.1",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
